@@ -251,7 +251,7 @@ by fhem.pl?</b>
    receiver or with googleearth. Compute the latitude/longitude as needed, and
    enter them in your lastinclude file with the command:
    <pre>{sunrise_coord("<latitude>", "<longitude>", "") }</pre>
-   After restart, { sunrise_abs() } will return the time of the sunrise today,
+   After restart, { sunrise() } will return the time of the next sunrise,
    in a HH:MM:SS format.<br><br>
 
    Note: 99_SUNRISE_EL.pm is the ExtraLight version of the original
