@@ -396,3 +396,7 @@
   - pgm3: bugfix, format table for userdef
   - pgm3: feature X10_support, taillogorder optional with date
   - pgm3: HMS100CO added, fhem.html relating pgm3 updated
+
+- Sat May 30 2009 (Rudi)
+  - 99_SUNRISE_EL: sunrise/sunset called in "at" computes correctly the next
+    event. New "sunrise()/sunset()" calls added, min max optional parameter.
